# persevere

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  main.py  main_expert.py  postprocessor.py  precompute_value_function.py  pyproject.toml  tools.py  viz.py
configs/: general.yaml  scenario_filter.yaml
configs/hypothesis_generator/: fixed.yaml  ground_truth.yaml  noisy.yaml
configs/nuplan/: default.yaml
configs/results/: default.yaml
configs/risk/: bound.yaml  copula.yaml
configs/scenarios/: handpicked_100.yaml  others.yaml  test.yaml  wip.yaml
docs/: configuration.md  failure_modes.md  installing_chromedriver.md  toolset.md
models/trajectron/: config.json  model_registrar-12.pt
patches/: nuplan-v1.1.patch  trajectron.patch
severity_estimation/cost/: cost_functions.py  cost_manager.py  cost_util.py  utils.py
severity_estimation/fault_injection/: common_failures.py  datatypes.py  failures.py  simulation_history_buffer.py  simulator.py  utils.py
severity_estimation/hamilton_jacobi/: hj_severity.py  system_dynamics.py  utils.py
severity_estimation/planner/: idm_agents.py  prediction_risk_planner.py  query.py  query_utils.py  risk_planner_report.py  risk_planner_results.py  scene_manager.py  trajectron_manager.py  trajectron_manager_online.py  utils.py
severity_estimation/planner/hypothesis/: generator.py
severity_estimation/planner/metrics/: collision_metric.py
severity_estimation/severity/: bound_risk_function.py  bounds.py  copula_risk_function.py  risk_threshold.py
severity_estimation/trajectron/: __init__.py  datatypes.py  online.py  visualization.py
severity_estimation/utils/: containers.py  scenario_stepper.py  textable.py
tests/: risk_threshold_test.py
